Fiz a mudança nos paragrafos e outras coisinhas a mais espero ter feito certo

--- a/aspiracoes.html
+++ b/aspiracoes.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Aspirações</h1>
-    <p>Não sei o que eu quero fazer da vida ainda mas  tenh que colocar algumas aqui</p>
+    <p>Não sei o que eu quero fazer da vida ainda, mas sou obrigado a colocar algumas aqui então...</p>
     <ul> Fazendeiro </ul>
     <ul> Astronalta</ul>
     <ul> Motoboy</ul>
