--- a/estagio.html
+++ b/estagio.html
@@ -11,17 +11,17 @@
     <h2>1. Introdução</h2>
     <h3>1.1 Objetivos</h3>
     <h4>1.1.1. Objetivo Geral</h4>
-    <p>O objetivo geral do estágio foi integrar o estagiário ao ambiente profissional da área de informática, proporcionando uma vivência prática que complementasse a formação acadêmica. O estágio visou desenvolver a capacidade de mim de executar tarefas e resolver problemas reais dentro do setor de TI da empresa.</p>
+    <p>O objetivo geral do estágio foi somente pra mim fazer passar raiva.</p>
     <h4>1.1.2. Objetivos Específicos</h4>
-    <p>Desenvolver Competências Técnicas, Apoiar Projetos em Andamento, Aprimorar Habilidades de Comunicação, Gerenciar Problemas e Soluções</p>
+    <p>Desenvolver Habilidades para jogar euro truck e asseto corsa e a mobilidade da mão no CS. </p>
 
     <h2>2. Atividades realizadas</h2>
     <h3>2.1. Atividade 01</h3>
-    <p>Desenvolvimento e Manutenção de Sistemas: Colaboração na programação e ajuste de sistemas internos da empresa, incluindo a correção de bugs e a implementação de melhorias funcionais.</p>
+    <p>Reparo de dispositivos da nasa e da spacex juntamnete com pelé.</p>
     <h3>2.2 .Atividade 02</h3>
-    <p>Suporte Técnico: Prestação de suporte técnico a usuários, auxiliando na resolução de problemas relacionados a hardware e software.</p>
+    <p>Busquei muita agua fui tirado pra vala.</p>
 
     <h2>3. Conclusão</h2>
-    <p>O estágio na Informatica Salinas foi uma experiência enriquecedora que me proporcionou a oportunidade de aplicar e expandir seus conhecimentos na área de informática. As atividades realizadas contribuíram para o desenvolvimento de habilidades técnicas e profissionais, preparando-o para futuros desafios na carreira. A experiência também destacou a importância da comunicação e do trabalho em equipe, aspectos fundamentais para o sucesso na área de TI.</p>
+    <p>Todas Essas Informações são ficticias então fazer o favor de não levar a serio ate porque eu ainda não realizai o .</p>
 </body>
 </html>
