--- a/experiencias.html
+++ b/experiencias.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Experiencias</h1>
-    <p>Durante o estágio realizado na Informatica Salinas, eu vivenciei uma série de experiências valiosas que iram contribuir significativamente para o meu desenvolvimento pessoal e profissional. As principais experiências do estágio incluem: Adaptação ao Ambiente Corporativo e também o trabalho em equipe</p>
+    <p>Durante meu estagio eu procrastinei bastante e gostei da parte que eu so dormia e jogava CS e euro truck. </p>
     <ol>
         <li> C </li>
         <li> Python </li>
