mudei algumas coisas

--- a/experiencias.html
+++ b/experiencias.html
@@ -9,11 +9,11 @@
     <h1>Experiencias</h1>
     <p>Durante meu estagio eu procrastinei bastante e gostei da parte que eu so dormia e jogava CS e euro truck. </p>
     <ol>
-        <li> C </li>
-        <li> Python </li>
-        <li> Java </li>
-        <li> Go </li>
-        <li> Php </li>
+        <li> Farcry </li>
+        <li> Euro Truck </li>
+        <li> CS GO </li>
+        <li> GTA RP </li>
+        <li> Asseto Corsa </li>
     </ol>
 </body>
 </html>
